--- a/content/team.html
+++ b/content/team.html
@@ -5,15 +5,15 @@
     <div class="container">
         <div class="row text-center">
             <!-- Kavya -->
-            <div class="col-lg-3">
-                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
+            <div class="col-lg-6">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle" style="width: 250px; height: 250px;">
                 <h3>Kavya</h3>
                 <p>CEO & Director</p>
             </div>
 
             <!-- Ramdas -->
-            <div class="col-lg-3">
-                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
+            <div class="col-lg-6">
+                <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle" style="width: 250px; height: 250px;">
                 <h3>Ramdas</h3>
                 <p>COO & Director</p>
             </div>
@@ -22,21 +22,21 @@
         <!-- Advisors Section -->
         <div class="row text-center mt-5">
             <!-- Dr. Vaishnav -->
-            <div class="col-lg-2">
+            <div class="col-lg-4">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Vaishnav" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Vaishnav</h4>
                 <p>KIMS Hospital</p>
             </div>
 
             <!-- Dr. Member4 -->
-            <div class="col-lg-2">
+            <div class="col-lg-4">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member4" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Member4</h4>
                 <p>ISRO</p>
             </div>
 
             <!-- Dr. Member5 -->
-            <div class="col-lg-2">
+            <div class="col-lg-4">
                 <img src="/media/ramdas369rd/New Volume/Job/KinKinetics/Kinkinetics India/kinkineticsin-website/assets/images/Square.png" alt="Dr. Member5" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Member5</h4>
                 <p>UK Space Agency</p>
@@ -70,5 +70,22 @@
     p {
         margin-top: 5px;
         font-size: 1rem;
+    }
+
+    /* Specific styling for founders */
+    .col-lg-6 img {
+        width: 250px;
+        height: 250px;
+    }
+    
+    /* Specific styling for advisors */
+    .col-lg-4 img {
+        width: 100px;
+        height: 100px;
+    }
+
+    /* Spacing for the rows */
+    .row.mt-5 {
+        margin-top: 40px;
     }
 </style>
