--- a/content/team.html
+++ b/content/team.html
@@ -5,14 +5,14 @@
     <div class="container">
         <div class="row text-center">
             <!-- Kavya -->
-            <div class="col-lg-6">
+            <div class="col-md-6 col-lg-6">
                 <img src="/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle" style="width: 250px; height: 250px;">
                 <h3>Kavya</h3>
                 <p>CEO & Director</p>
             </div>
 
             <!-- Ramdas -->
-            <div class="col-lg-6">
+            <div class="col-md-6 col-lg-6">
                 <img src="/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle" style="width: 250px; height: 250px;">
                 <h3>Ramdas</h3>
                 <p>COO & Director</p>
@@ -22,21 +22,21 @@
         <!-- Advisors Section -->
         <div class="row text-center mt-5">
             <!-- Dr. Vaishnav -->
-            <div class="col-lg-4">
+            <div class="col-md-4 col-lg-4">
                 <img src="/assets/images/Square.png" alt="Dr. Vaishnav" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Vaishnav</h4>
                 <p>KIMS Hospital</p>
             </div>
 
             <!-- Dr. Member4 -->
-            <div class="col-lg-4">
+            <div class="col-md-4 col-lg-4">
                 <img src="/assets/images/Square.png" alt="Dr. Member4" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Member4</h4>
                 <p>ISRO</p>
             </div>
 
             <!-- Dr. Member5 -->
-            <div class="col-lg-4">
+            <div class="col-md-4 col-lg-4">
                 <img src="/assets/images/Square.png" alt="Dr. Member5" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
                 <h4>Dr. Member5</h4>
                 <p>UK Space Agency</p>
@@ -73,13 +73,13 @@
     }
 
     /* Specific styling for founders */
-    .col-lg-6 img {
+    .col-md-6 img {
         width: 250px;
         height: 250px;
     }
-    
+
     /* Specific styling for advisors */
-    .col-lg-4 img {
+    .col-md-4 img {
         width: 100px;
         height: 100px;
     }
