--- a/content/team.html
+++ b/content/team.html
@@ -3,41 +3,41 @@
 
     <!-- Founders Section -->
     <div class="container">
-        <div class="row text-center">
+        <div class="row justify-content-center text-center">
             <!-- Kavya -->
             <div class="col-md-6 col-lg-6">
-                <img src="/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle" style="width: 250px; height: 250px;">
+                <img src="/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle">
                 <h3>Kavya</h3>
                 <p>CEO & Director</p>
             </div>
 
             <!-- Ramdas -->
             <div class="col-md-6 col-lg-6">
-                <img src="/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle" style="width: 250px; height: 250px;">
+                <img src="/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle">
                 <h3>Ramdas</h3>
                 <p>COO & Director</p>
             </div>
         </div>
 
         <!-- Advisors Section -->
-        <div class="row text-center mt-5">
+        <div class="row justify-content-center text-center mt-5">
             <!-- Dr. Vaishnav -->
             <div class="col-md-4 col-lg-4">
-                <img src="/assets/images/Square.png" alt="Dr. Vaishnav" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                <img src="/assets/images/Square.png" alt="Dr. Vaishnav" class="img-fluid rounded-circle">
                 <h4>Dr. Vaishnav</h4>
                 <p>KIMS Hospital</p>
             </div>
 
             <!-- Dr. Member4 -->
             <div class="col-md-4 col-lg-4">
-                <img src="/assets/images/Square.png" alt="Dr. Member4" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                <img src="/assets/images/Square.png" alt="Dr. Member4" class="img-fluid rounded-circle">
                 <h4>Dr. Member4</h4>
                 <p>ISRO</p>
             </div>
 
             <!-- Dr. Member5 -->
             <div class="col-md-4 col-lg-4">
-                <img src="/assets/images/Square.png" alt="Dr. Member5" class="img-fluid rounded-circle" style="width: 100px; height: 100px;">
+                <img src="/assets/images/Square.png" alt="Dr. Member5" class="img-fluid rounded-circle">
                 <h4>Dr. Member5</h4>
                 <p>UK Space Agency</p>
             </div>
@@ -46,7 +46,7 @@
 </section>
 
 <style>
-    /* Add some margin for spacing */
+    /* Team section styling */
     .team-section {
         padding: 50px 0;
         background-color: #f8f8f8;
@@ -57,7 +57,7 @@
         border-radius: 50%;
     }
 
-    /* Centering text in the columns */
+    /* Centering text in columns */
     .text-center h3, .text-center h4, .text-center p {
         text-align: center;
     }
@@ -72,20 +72,28 @@
         font-size: 1rem;
     }
 
-    /* Specific styling for founders */
+    /* Specific styling for founder images */
     .col-md-6 img {
         width: 250px;
         height: 250px;
     }
 
-    /* Specific styling for advisors */
+    /* Specific styling for advisor images */
     .col-md-4 img {
         width: 100px;
         height: 100px;
     }
 
-    /* Spacing for the rows */
+    /* Spacing for the advisors' section */
     .row.mt-5 {
         margin-top: 40px;
+    }
+
+    /* Flexbox alignment for horizontal layout */
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
     }
 </style>
