team alignment updated

--- a/content/team.html
+++ b/content/team.html
@@ -5,14 +5,14 @@
     <div class="container">
         <div class="row justify-content-center text-center">
             <!-- Kavya -->
-            <div class="col-md-6 col-lg-6">
+            <div class="col-md-6 col-lg-6 mb-4">
                 <img src="/assets/images/Square.png" alt="Kavya" class="img-fluid rounded-circle">
                 <h3>Kavya</h3>
                 <p>CEO & Director</p>
             </div>
 
             <!-- Ramdas -->
-            <div class="col-md-6 col-lg-6">
+            <div class="col-md-6 col-lg-6 mb-4">
                 <img src="/assets/images/Square.png" alt="Ramdas" class="img-fluid rounded-circle">
                 <h3>Ramdas</h3>
                 <p>COO & Director</p>
